fixed some files

--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/bluetooth.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/bluetooth.tex
@@ -13,16 +13,13 @@ Bluetooth ist eine kabellose Variante wie mehrere Geräte über kurze Distanz mi
 \textbf{Kommunikation\newline}
 Eine Kommunikation mittels Bluetooth kann man in folgende Schritte unterteilen.
 \nextline
-•	Ein Gerät auswählen mit welchem man kommunizieren möchte
-\nextline
-•	Herausfinden, wie man mit besagtem Gerät kommunizieren kann
-\nextline
-•	Aufbauen einer ausgehenden Verbindung
-\nextline
-•	Akzeptieren einer ankommenden Verbindung
-\nextline
-•	Senden und empfangen von Daten
-\nextline
+\begin{itemize}
+\item Ein Gerät auswählen mit welchem kommuniziert werden soll
+\item Herausfinden, wie man mit dem besagten Gerät kommunizieren kann
+\item Aufbauen einer ausgehenden Verbindung
+\item Akzeptieren einer ankommenden Verbindung
+\item Senden und empfangen von Daten
+\end{itemize}
 \textbf{Gerätewahl\nextline}
 Jeder Bluetooth Chip besitzt eine eindeutige Adresse. Damit ein Gerät mit einem anderen Kommmunizieren kann, muss es eine Mögllichkeit geben, diese Bluetooth-Adresse zu erfahren. Im Fall von Bluetooth werden dem Gerät meist benutzerfreundliche Namen vom Besitzer oder der Besitzerin vergeben.
 Wahl des Transportprotokolles
