--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/einleitung.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/einleitung.tex
@@ -19,7 +19,7 @@ Desweiteren ist die Auflösung der Sensoren in verschiedenen Smartphones nicht a
 	\item Selbstgebauter Car-PC:
 	\begin{itemize}
 	\item Vorteile: \nextline
-	Einen eigenen PC zu bauen ermöglicht uns die Wahl der passenden Sensoren. Das bedeuted, in jedem Fahrzeug befinden sich der gleiche Car-PC, also dieselben Sensoren.
+	Einen eigenen PC zu bauen ermöglicht uns die Wahl der passenden Sensoren. Das bedeutet, in jedem Fahrzeug befinden sich der gleiche Car-PC, also dieselben Sensoren.
 	Zusätzlich dazu ist es nun bei dieser Variante auch möglich, eine Datenbank auf dem Car-PC zu installieren, und somit Speicher auf dem Smartphone des Benutzers zu sparen.
 	\item Nachteile: \nextline
 	Ein proprietärer Car-PC muss selbst im Fahrzeug eingebaut werden. Um diesen Nachteil auszugleichen, ist der PC so konzipiert, dass er möglichst einfach in einem DIN-Slot installiert werden kann.
