--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/i2c.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/i2c.tex
@@ -17,7 +17,7 @@ Alle Teilnehmer am Bus erhalten eine eindeutige Adresse. Ein Master kann mithilf
 \textbf{Beispiel\nextline}
 Eine Beispielhafte Kommunikation könnte folgendermaßen aussehen:
 \nextline
-Auf einem I2C-Bus liegt ein Mikrocontroller mit der Adresse 00 und ein Beschleunigungssensor mit der Adresse 01. Der Mikrocontroller übernimmt die Rolle des Masters und der Sensor ist der sogenannte Slave. Nun möchte man Daten aus dem Sensor auslesen. Der Microkontroller prüft ob der Bus „frei“ ist, also ob niemand anderer die Leitung belegt. Dies ist nicht der Fall also sendet der Master eine Nachricht bestehend aus der Zieladresse ( in unserem Fall „01“) und teilt dem Slave mit ob Daten gesendet oder empfangen werden sollen. Nun sendet der Slave die Daten an den Controller bis die kommunikation vom Master beendet wird.
+Auf einem I2C-Bus liegt ein Mikrocontroller mit der Adresse 00 und ein Beschleunigungssensor mit der Adresse 01. Der Mikrocontroller übernimmt die Rolle des Masters und der Sensor ist der sogenannte Slave. Nun möchte man Daten aus dem Sensor auslesen. Der Microkontroller prüft ob der Bus „frei“ ist, also ob niemand anderer die Leitung belegt. Dies ist nicht der Fall also sendet der Master eine Nachricht bestehend aus der Zieladresse (in diesem Fall „01“) und teilt dem Slave mit ob Daten gesendet oder empfangen werden sollen. Nun sendet der Slave die Daten an den Controller bis die kommunikation vom Master beendet wird.
 
 
 \clearpage % DO NOT REMOVE
