--- a/diplomarbeit/sections/ch5_conclusio_outlook/conclusio.tex
+++ b/diplomarbeit/sections/ch5_conclusio_outlook/conclusio.tex
@@ -7,7 +7,7 @@ einen USB-WLAN Adapter,
 einen USB-Bluetooth Adapter,
 ein GY521 Beschleunigungssensor und
 ein DS1621 Temperatursensor.
-\item Eine Android-App, die die Motordaten eines PKW und die Sensordaten des Car-PC aus dem Datenmanagementgraphisch in Echtzeit darstellt und aufnimmt, um sie am Ende der Fahrt in die Cloud zu laden.
+\item Eine Android-App, die die Motordaten eines PKW und die Sensordaten des Car-PC aus dem Datenmanagementgraphisch in Echtzeit darstellt und aufnimmt, um sie am Ende der Fahrt auf unseren Server zu laden.
 \item Ein Datenmanagement, die die Schnittstelle des Car-PC und des Motormanagement ausliest und der Android-App zur Verfügung stellt.
 \item Das Front-End einer Web-Applikation, welches die gesammelten Daten retrospektiv darstellt.
 \end{itemize}
@@ -23,11 +23,11 @@ ein DS1621 Temperatursensor.
 	Daniel Melichar ist außerdem für die Datenstrukturierung und das Account Management der geplanten Web-Applikation zuständig.Die Datenstrukturierung wird mittels eines Content Management Systems geschehen, für welches Herr Melichar sich um das Hosting und die Rechte auf dem Server kümmern wird. 
 
 	\textbf{Raphael Simsek: Schaltvorgangsvorschlag\newline}
-	Raphael Simsek erstellt das Grundgerüst der App mittels dem Angular JS Framework ionic gemeinsam mit dem App-Team bestehend aus Hüseyin Bozkurt und Fitim Faiku.
+	Raphael Simsek ist für die Berechnung und darstellung eines effizienten Schaltvorschlages zuständig.
 	Mit den von Daniel Melichar erstellten Methoden berechnet Raphael Simsek den effizientesten oder drehmomentintensivsten Gang mittels verschiedener Algorithmen. Diese Gang-Berechnung soll allerdings auf aktuelle Erkenntnisse aus dem Motormanagement eingehen, indem beispielsweise die Informationen des Gyroskops für die Erkenntnis ob der Nutzer sich auf einer steilen oder abfallenden Straße befindet um dadurch unnötige Falschangaben der App zu vermeiden. Die Erkennung ob ein Gang wirklich gewechselt wurde soll mittels der stark abfallenden Drehzahl oder der Fahrgeschwindigkeit passieren.
 	
 	\textbf{Hüseyin Bozkurt: Verbrauchsanalyse\newline}
-	 Hüseyin Bozkurt ist für die Verbrauchsdarstellung während der Fahrt und für die retrospektive Verbrauchsanalyse nach der Fahrt zuständig.
+	 Hüseyin Bozkurt ist für die Verbrauchsdarstellung während der Fahrt und für retrospektive Ansichten nach der Fahrt zuständig.
 	 Diese wird hauptsächlich in Form von Liniendiagrammen geschehen, indem man den Schadstoffausstoß über eine bestimmte Zeit analysiert. In Verbindung mit der Webapplikation, werden diese Informationen mit OpenMap-Daten verbunden und zur schau gestellt.
 	 Somit soll eine umweltentlastende Fahrweise nach und nach gefördert werden. Demnach existiert die Option, die analysierte Fahrt auf Facebook mittels OAuth zu teilen, um Mitbenutzern der App einen Vergleich bieten zu können und - falls es Fragen wie zum Beispiel zu einer Strecke gibt, ihnen durch diese Vergleichswerte genügend Information zu bieten und eine offene Diskussionsrunde zu starten.
 	
