Letzte Verbesserung hofentlich

--- a/diplomarbeit/sections/ch3_implementierung/android-app.tex
+++ b/diplomarbeit/sections/ch3_implementierung/android-app.tex
@@ -1,6 +1,6 @@
 \lfoot{Autor: Fitim Faiku}
 \subsection{Android App}
-Die Android App ist dazu da, um den Usern die Generierten Daten möglichst Aufschlussreich darzustellen.
+Die Android App ist dazu da, um den Benutzer die Generierten Daten möglichst Aufschlussreich darzustellen.
 Bei der Android App werden erstmal die drei Seiten(Tabs) erstellt. Die Tabs werden den drei Hauptfeauters zugeordnet(Verbrauchsanalyse-Fahrgastkommfort-Schaltvorschlag). 
 
 \label{subsec:androidapp}
