Hello from Saraw :penguin:

--- a/diplomarbeit/sections/ch4_wirtschaftlichkeit/main.tex
+++ b/diplomarbeit/sections/ch4_wirtschaftlichkeit/main.tex
@@ -1,4 +1,5 @@
 \section{Wirtschaftlicher Nutzen}
+\lfoot{Autor: Tobias Perny}
 \label{sec:wirt}
 
 Das Projekt BestShift deckt einen neuen Markt ab und hat großes Verkaufspotential, da es kein vergleichbares System gibt (siehe Sektion 1). Durch die Anbindung des Systems an sozialle Medien wird dem Verwender die Möglichkeit geboten Analysen und Darstellungen von Fahrten auf gängigen Plattformen wie Facebook oder Twitter zu posten. Wir prognostizieren, dass dadurch die Bekanntheit des Projekts gesteigert wird und mehr Leute zur Verwendnug gebracht werden. 
