--- a/diplomarbeit/sections/ch5_conclusio_outlook/outlook.tex
+++ b/diplomarbeit/sections/ch5_conclusio_outlook/outlook.tex
@@ -1,10 +1,11 @@
 \lfoot{Autor: Faiku Fitim}
 \subsection{Outlook und Verbesserungsmöglichkeiten}
 
-Weiterhin haben wir uns überlegt, die Web Applikation zu überarbeiten und weiter Funktionen hinzuzufügen.            
-Die Android App kann ebenfalls verbessert werden indem wir es so Programmieren, dass es auf mehreren Devices lauffähig ist. Die Potenziellen Kunden können ebenfalls angesprochen werden und es kann sich bis zu einem Geschäft entwickeln, in dem wir unser Produkt entweder an Fahrschulen oder Taxi-Unternehmen verkaufen.                  
-Ein weiterer Schritt wäre, dass wir uns von den "hohen" Kosten der Hardware-Komponenten trennen und dafür in großen Mengen einen Nachlass bekommen. 
+Der weitere Verlauf des Projekts würde sich auf die Implementierung der Web-Applikation fokusieren. Bei dieser muss die sozialle Anbindung so bald wie nur möglich umgesetzt werden, um die Vermarktung des Produkts möglichst baldig durchzuführen. Auch für die Android-Applikation gibt es Verbesserungspotential - Reduktion des Akkuverbrauchs während der Verwendung, schnellere Datenübertragung, verbesserungen am User Interface. Es besteht auch die Möglichkeit einer Applikation für Apple Smartphones, welche mittels dem iOS Betriebssystem laufen.
 
+Die Kontaktaufnahme mit den potentiellen Kunden, insbesondere mit Mittel- und Großkonzernen, ist ebenfalls Es­sen­zi­el. 
+
+Eine Kostenersparnis kann durch eine Verbesserung des Car-PCs erzielt werden. Diese Komponente des Systems ist momentan eine Verbindung von mehreren bereits vorhandenen Umsetzungen (z.B. Rasbperry Pi). Um kosten zu sparen, sollte der Car-PC komplett durch BestShift entwickelt werden.
 
 
 \clearpage % DO NOT REMOVE
