--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/vorhandene_umsetzung.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/vorhandene_umsetzung.tex
@@ -1,4 +1,4 @@
 \lfoot{Autor: Tobias Perny}
 \subsubsection{Vorhandene Umsetzung}
 \label{subsec:Vorhandene Umsetzung}
-Nach durchgeführte Recherche wurde ein Produkt entdeckt, welches unserem sehr ähnlich ist: der "Low Budget Car PC" von MechLab [http://mechlab-engineering.de/references/low-budget-car-pc/].
+Nach durchgeführte Recherche wurde ein Produkt entdeckt, welches unserem sehr ähnlich ist: der "Low Budget Car PC" von MechLab \cite{MechLab-Enineering}.
