--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -726,3 +726,11 @@ note = {Accessed on 30.03.2016}
     howpublished = "\url{http://www.faz.net/aktuell/technik-motor/auto-verkehr/neuer-diesel-motor-selbstzuendender-meister-des-wirkungsgrads-1232042.html}",
     note = {Accessed on 07.04.2016}
 }
+
+@misc{PERT.CH3-vorhandeneumsetung.mechlab, 
+    author = {MechLab-Engineering},
+    year = {2015},
+    title = {MechLab-Enineering},
+    howpublished = "\url{http://mechlab-engineering.de/references/low-budget-car-pc/}",
+    note = {Accessed on 08.04.2016}
+}
